added new files

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  background-color: #9a9a9e;
+  background-color: #F5F5F5;
 } 
 
 *,
@@ -83,10 +83,63 @@ list-style-type: none;
   text-decoration: none;
   color: #4f0421;
 }
-h1, h2, h3 {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #095c2e;
+.nav_hero {
+  margin: 0;
+  padding: 0;
+  background-color: #50735F;
+  width: 1140px;
+  height: 80px;
 }
-.h2 {
-  color: #2c0480;
+.navigation_up {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: auto;
+  align-items: center;
 }
+.logo {
+  color: #e2e2e7;
+  width: 129px;
+  height: 80px;
+  padding-left: 30px;
+}
+
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 20px ;
+  
+}
+nav ul li a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+nav ul li a:hover {
+  color: aqua;
+  transition: .3s;
+}
+.nav_right {
+  align-items: self-end;
+}
+.nav_footer {
+  margin: 0;
+  padding: 0;
+  background-color: #50735F;
+  width: 1140px;
+  height: 375px;
+  font-family: GT Cinetype Trial;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #FFFFFF;
+}
+.navi_footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: auto;
+
+}
+
